# http-streams

./: .gitignore  CHANGELOG.markdown  CHANGELOG.md  CONTRIBUTORS.md  Configure.hs  LICENCE  LICENSE  Makefile  README.markdown  README.md  Setup.hs  cabal.haskell-ci  http-streams.cabal  stack-nightly-9.2.1.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
lib/Network/Http/: Client.hs  Connection.hs  Inconvenience.hs  ResponseParser.hs  Utilities.hs
src/Network/Http/: Builder.hs  Client.hs  Connection.hs  Inconvenience.hs  RequestBuilder.hs  ResponseParser.hs  Types.hs  Utilities.hs
tests/: ActualSnippet.hs  BaselinePoint.hs  BasicSnippet.hs  Benchmark.hs  Check.hs  ComparisonBenchmark.hs  ConduitSample.hs  CurrentPoint.hs  ExampleConduit.hs  ExampleStreams.hs  ExperimentalSnippet.hs  IsolatedBenchmark.hs  IsolatedTestBaseline.hs  JsonSnippet.hs  MockServer.hs  PerformanceSnippet.hs  PipeliningSnippet.hs  SecureSocketsSnippet.hs  Snippet.hs  StreamsSample.hs  TestServer.hs  TestSuite.hs  VersionsBenchmark.hs  check.hs  example2.txt  example3.txt
