cabal-version:       >= 1.10
name:                http-streams
version:             0.2.0
synopsis:            An HTTP client using io-streams
description:
 /Overview/
 .
 An HTTP client, using the Snap Framework's 'io-streams' library to
 hande the streaming IO. The API is optimized for ease of use for the
 rather common case of code needing to query web services and deal with
 the result.
 .
 The library is exported in a single module; see "Network.Http.Client"
 for full documentation.

license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2012 Operational Dynamics Consulting, Pty Ltd
category:            Web
tested-with:         GHC == 7.4
stability:           experimental
homepage:            http://research.operationaldynamics.com/projects/http-streams/
bug-reports:         https://github.com/afcowie/http-streams/issues

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     attoparsec,
                     base,
                     blaze-builder,
                     bytestring,
                     case-insensitive,
                     io-streams >= 1.0 && <1.1,
                     HsOpenSSL,
                     openssl-streams >= 1.0 && <1.1,
                     mtl,
                     network,
                     text,
                     unordered-containers

  hs-source-dirs:    src
  exposed-modules:   Network.Http.Client
  other-modules:     Network.Http.Types,
                     Network.Http.Connection,
                     Network.Http.RequestBuilder,
                     Network.Http.ResponseParser,
                     Network.Http.Inconvenience

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:
                     HUnit,
                     HsOpenSSL,
                     MonadCatchIO-transformers,
                     attoparsec,
                     base,
                     blaze-builder,
                     bytestring,
                     case-insensitive,
                     hspec,
                     io-streams,
                     mtl,
                     network,
                     openssl-streams >= 1.0 && <1.1,
                     snap            >= 0.9    && < 1.0,
                     snap-core       >= 0.9    && < 1.0,
                     snap-server     >= 0.9    && < 1.0,
                     system-fileio   >= 0.3.10 && < 0.4,
                     system-filepath >= 0.4.1  && < 0.5,
                     unordered-containers

  hs-source-dirs:    src,tests
  main-is:           Check.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind


-- vim: set tabstop=21 expandtab:
