cabal-version:       >= 1.10
name:                http-streams
version:             0.7.2.6
synopsis:            An HTTP client using io-streams
description:
 /Overview/
 .
 An HTTP client, using the Snap Framework's 'io-streams' library to
 hande the streaming IO. The API is optimized for ease of use for the
 rather common case of code needing to query web services and deal with
 the result.
 .
 The library is exported in a single module; see "Network.Http.Client"
 for full documentation.

license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2012-2015 Operational Dynamics Consulting, Pty Ltd and Others
category:            Web
tested-with:         GHC == 7.8
stability:           experimental
homepage:            http://research.operationaldynamics.com/projects/http-streams/
bug-reports:         https://github.com/afcowie/http-streams/issues

build-type:          Custom

library
  default-language:  Haskell2010

  build-depends:     attoparsec,
                     http-common >= 0.7.2 && < 0.8,
                     base >= 4 && <5,
                     directory,
                     base64-bytestring,
                     blaze-builder,
                     bytestring,
                     case-insensitive,
                     io-streams >= 1.1 && <1.4,
                     HsOpenSSL >= 0.10.3.5,
                     openssl-streams >= 1.1 && < 1.4,
                     mtl,
                     transformers,
                     network >= 2.6,
                     network-uri >= 2.6,
                     text,
                     unordered-containers,
                     aeson

  hs-source-dirs:    lib
  exposed-modules:   Network.Http.Client
  other-modules:     Network.Http.Connection,
                     Network.Http.ResponseParser,
                     Network.Http.Utilities,
                     Network.Http.Inconvenience

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  include-dirs:      .

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:
                     http-common >= 0.7.2 && < 0.8,
                     HUnit,
                     HsOpenSSL,
                     MonadCatchIO-transformers,
                     aeson-pretty,
                     attoparsec,
                     base,
                     directory,
                     blaze-builder,
                     base64-bytestring,
                     bytestring,
                     case-insensitive,
                     ghc-prim,
                     hspec,
                     hspec-expectations,
                     io-streams,
                     mtl,
                     transformers,
                     network >= 2.6,
                     network-uri >= 2.6,
                     openssl-streams,
                     snap-core       >= 0.9    && < 1.0,
                     snap-server     >= 0.9    && < 1.0,
                     system-fileio   >= 0.3.10 && < 0.4,
                     system-filepath >= 0.4.1  && < 0.5,
                     text,
                     unordered-containers,
                     aeson,
                     http-streams

  hs-source-dirs:    lib,tests
  main-is:           check.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  include-dirs:      .

test-suite           snippet
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:
                     base,
                     bytestring,
                     io-streams,
                     http-streams

  hs-source-dirs:    tests
  main-is:           snippet.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  include-dirs:      .


source-repository    head
  type:              git
  location:          git://github.com/afcowie/http-streams.git


-- vim: set tabstop=21 expandtab:
