cabal-version:       1.24
name:                http-streams
version:             0.8.7.1
synopsis:            An HTTP client using io-streams
description:
 /Overview/
 .
 An HTTP client, using the Snap Framework's 'io-streams' library to
 hande the streaming IO. The API is optimized for ease of use for the
 rather common case of code needing to query web services and deal with
 the result.
 .
 The library is exported in a single module; see "Network.Http.Client"
 for full documentation.

license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2012-2019 Operational Dynamics Consulting, Pty Ltd and Others
category:            Web, IO-Streams
tested-with:         GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5
stability:           experimental
homepage:            https://github.com/afcowie/http-streams/
bug-reports:         https://github.com/afcowie/http-streams/issues
extra-source-files:  README.markdown CHANGELOG.markdown
                     tests/MockServer.hs
                     tests/TestSuite.hs
                     tests/data-eu-gdp.json
                     tests/data-us-gdp.json
                     tests/data-jp-gdp.json
                     tests/statler.jpg
                     tests/example1.txt
                     tests/example2.txt
                     tests/example3.txt
                     tests/example4.txt
                     tests/example5.txt
                     tests/hello.txt
                     tests/hello.html

build-type:          Simple

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  default-language:  Haskell2010

  build-depends:     attoparsec,
                     base >= 4.5 && <5,
                     directory,
                     base64-bytestring,
                     blaze-builder >= 0.4,
                     bytestring,
                     case-insensitive,
                     io-streams >= 1.3 && < 1.6,
                     HsOpenSSL >= 0.11.2,
                     openssl-streams >= 1.1 && < 1.4,
                     mtl,
                     transformers,
                     text,
                     unordered-containers,
                     aeson,
                     http-common >= 0.8.2
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  hs-source-dirs:    lib
  exposed-modules:   Network.Http.Client,
                     Network.Http.Connection,
                     Network.Http.ResponseParser,
                     Network.Http.Inconvenience
  other-modules:     Network.Http.Utilities

  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  include-dirs:      .

  ghc-prof-options:  -fprof-auto-exported


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:
                     HUnit,
                     HsOpenSSL,
                     lifted-base,
                     aeson-pretty,
                     attoparsec,
                     base,
                     directory,
                     blaze-builder,
                     base64-bytestring,
                     bytestring,
                     case-insensitive,
                     ghc-prim,
                     hspec,
                     hspec-expectations,
                     io-streams,
                     mtl,
                     transformers,
                     network >= 2.6,
                     network-uri >= 2.6,
                     openssl-streams >= 1.1    && < 1.4,
                     snap-core       >= 1.0    && < 1.2,
                     snap-server     >= 1.1    && < 1.2,
                     system-fileio   >= 0.3.10 && < 0.4,
                     system-filepath >= 0.4.1  && < 0.5,
                     text,
                     unordered-containers,
                     aeson,
                     http-common  >= 0.8.2,
                     http-streams

  hs-source-dirs:    tests
  main-is:           check.hs
  other-modules:     TestSuite
                     MockServer

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  include-dirs:      .


source-repository    head
  type:              git
  location:          git://github.com/afcowie/http-streams.git


-- vim: set tabstop=21 expandtab:
